# InternshipTracker

backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/core/: config.py
backend/models/: enums.py  jobs.py  user.py
backend/routers/: auth.py  jobs.py
backend/schemas/: jobs.py  user.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.js  jobs.js
frontend/src/components/: AddJobModal.jsx  FilterBar.jsx  JobCalendar.jsx  JobCard.jsx  JobDetailModal.jsx  JobKanban.jsx  JobList.jsx  LoadingScreen.jsx  Navbar.jsx  statusConfig.jsx
frontend/src/context/: AuthContext.jsx  JobsContext.jsx
frontend/src/routes/: Dashboard.jsx  Login.jsx
