[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
